fixed overflow pb with dropdown menus
git-svn-id: https://dev.camptocamp.org/svn/c2corg@1675 5b3c568a-86f9-4a59-a47a-7be284f604b4

--- a/web/static/js/mapfish/css/c2corg.css
+++ b/web/static/js/mapfish/css/c2corg.css
@@ -47,3 +47,7 @@ strong {
 	background: none;
 	border: 0;
 }
+
+#mapheader .x-panel-bwrap, #mapheader .x-panel-body {
+	overflow: visible;
+} 
